<resources>
    <!--
        Quy tắc đặt tên:
            + Tên dài cũng không sao miễn thể hiện đúng chức năng
            + Đặt tên:
                - phầntử (sử dụng snack_case nếu tên dài)
                - Sử dụng các từ: count, sum, total cho các chuỗi có chứa số bên trong
    -->

    <string name="app_name">harmony-chat</string>
    <string name="web_client_ID">170160510788-1fs52f2ec6vudtr4cnkcekjuq3b3036q.apps.googleusercontent.com</string>

    <string name="sign_in">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="forget">Quên mật khẩu?</string>
    <string name="login_other">Hoặc đăng nhập bằng mạng xã hội khác</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="friends">Bạn bè</string>
    <string name="count_friends">* người bạn</string>
    <string name="email">Email</string>
    <string name="phone">Số điện thoại</string>
    <string name="birth_date">Ngày sinh</string>
    <string name="sex">Giới tính</string>
    <string name="address">Địa chỉ</string>
    <string name="more">Xem thêm</string>
    <string name="save">Lưu lại</string>
    <string name="send_message">Gửi tin nhắn</string>

    <!-- Nội dung cho các nút -->
    <string name="back">Trở về</string>
    <string name="edit">Điều chỉnh</string>
    <string name="forgetpwdBtn">Quên mật khẩu</string>
    <string name="addFriend">Thêm bạn bè</string>
    <string name="cancelAddFriend">Hủy gửi kết bạn</string>
    <string name="friend">Bạn bè</string>
    <string name="deleteFriend">Hủy kết bạn</string>
    <string name="location">Vị trí</string>
    <string name="icon">Biểu tượng</string>

    <!-- Mẫu nội dung -->
    <string name="example_username">Tên người dùng</string>
    <string name="example_description">Mô tả</string>
    <string name="example_email">example@gmail.com</string>
    <string name="example_phone">(+84) 915 87 06 83</string>
    <string name="example_birth_date">1 / 01 / 2003</string>
    <string name="example_sex">Nam</string>
    <string name="example_address">58 Tân Lập 1, Đường số 9</string>
    <string name="example_relationship">Mối quan hệ</string>

    <!--    activity_chat_screen - 21130407 -->
    <string name="conversation_name">Tên cuộc trò chuyện</string>
    <!--    message_has_been_received: là tin nhắn mà client nhận được từ người khác
    Phân biệt với
    message_is_sent: là tin nhắn được client gửi đi
    -->
    <string name="message_has_been_received">Đây là tin nhắn chat được nhận</string>
    <string name="message_is_sent">Đây là tin nhắn chat được gửi đi</string>
    <string name="message_hint">Type your message...</string>

    <!--    fragment_message_options - 21130407-->
    <string name="message_detail">17 Apr 6:12 AM</string>
    <string name="options_reply">Trả lời</string>
    <string name="options_forward">Chuyển tiếp</string>
    <string name="options_copy">Sao chép</string>
    <string name="options_recall">Thu hồi</string>

    <!--    nôi dung cho ô input - 21130463-->
    <string name="password">Mật khẩu</string>
    <string name="username">Tên đăng nhập</string>
    <string name="reenterpwd">Nhập lại mật khẩu</string>
    <string name="hadaccount">Đã có tài khoản?</string>

    <string name="search">Tìm kiếm</string>

    <string name="my_map_api_key">AIzaSyBRvjBlPTUfJehnsZom-gvpJ3aWQrN4Ep4</string>

    <string name="all">All</string>
    <string name="unread">unread</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="picture">"Hình ảnh "</string>
    <string name="file">"Tập tin "</string>
    <string name="voice">Ghi âm</string>

</resources>