<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/primary_blue"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="40dp">

        <ImageView
        android:id="@+id/avatarImg"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        tools:srcCompat="@drawable/logo_black" />


    </androidx.cardview.widget.CardView>

    <EditText
    android:id="@+id/editEmailLogin"
    style="@style/input_style"
    android:drawableLeft="@drawable/email"
    android:drawablePadding="5dp"
    android:ems="10"
    android:inputType="textEmailAddress"
    android:layout_marginTop="60dp"
    android:textColorHint="@color/primary_white"
    android:hint="@string/email" />

    <EditText
        android:id="@+id/editPassword"
        style="@style/input_style"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="5dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/primary_white"
        android:hint="@string/password"
        android:drawableRight="@drawable/unhide" />

    <TextView
        android:id="@+id/forgetPasswordBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="right"
        android:textSize="@dimen/text_2"
        android:layout_marginBottom="10dp"
        android:textColor="@color/primary_white"
        android:text="@string/forget" />

    <Button
        android:id="@+id/loginBtn"
        style="@style/long_input_style"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="@dimen/text_2"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:textColor="@color/primary_white"
        android:text="@string/login_other" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <ImageButton
            android:id="@+id/googleBtn"
            style="@style/social_button_style"
            android:layout_weight="1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/google" />


        <ImageButton
            android:id="@+id/facebookBtn"
            style="@style/social_button_style"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/facebook" />

        <ImageButton
            android:id="@+id/githubBtn"
            style="@style/social_button_style"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/github" />
    </LinearLayout>

    <Button
        android:id="@+id/gotoSignupBtn"
        style="@style/second_long_input_style"
        android:layout_marginTop="60dp"
        android:text="@string/register"
        android:textAllCaps="false"/>



</LinearLayout>