<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MessageOptions">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_detail"
                android:textSize="@dimen/text_3"
                android:textStyle="normal" />

            <Button
                android:id="@+id/reply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:drawableRight="@drawable/akar_icons__arrow_back"
                android:gravity="center_vertical"
                android:padding="0dp"
                android:text="@string/options_reply"
                android:textColor="@color/primary_dark"
                android:textSize="@dimen/text_1"/>

            <Button
                android:id="@+id/forward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:drawableRight="@drawable/mingcute__send_line"
                android:gravity="center_vertical"
                android:padding="0dp"
                android:text="@string/options_forward"
                android:textColor="@color/primary_dark"
                android:textSize="@dimen/text_1"/>

            <Button
                android:id="@+id/copy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:drawableRight="@drawable/uil__copy"
                android:gravity="center_vertical"
                android:padding="0dp"
                android:text="@string/options_copy"
                android:textColor="@color/primary_dark"
                android:textSize="@dimen/text_1"/>

            <Button
                android:id="@+id/recall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:drawableRight="@drawable/trash"
                android:gravity="center_vertical"
                android:padding="0dp"
                android:text="@string/options_recall"
                android:textSize="@dimen/text_1"
                android:textColor="@color/danger"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>