<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:background="@color/primary_blue"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:paddingBottom="16dp"
        android:paddingRight="16dp"
        android:text="@string/back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="40dp">

            <ImageView
                android:id="@+id/avatarImg"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                tools:srcCompat="@drawable/logo_black" />

        </androidx.cardview.widget.CardView>

        <EditText

            android:id="@+id/editEmail"
            style="@style/input_style"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="5dp"
            android:ems="10"
            android:inputType="text"
            android:layout_marginTop="60dp"
            android:textColorHint="@color/white"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/editUsername"
            style="@style/input_style"
            android:drawableLeft="@drawable/account"
            android:drawablePadding="5dp"
            android:ems="10"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/white"
            android:hint="@string/username" />


        <Button
            android:id="@+id/forgetPasswordBtn"
            style="@style/long_input_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/forgetpwdBtn" />

    </LinearLayout>




</LinearLayout>