<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_blue"
    tools:context=".Access"
    tools:ignore="MissingDefaultResource">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/width_logo"
        android:layout_height="@dimen/height_logo"
        android:scaleType="fitCenter"
        android:layout_marginTop="@dimen/access_logo_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo_black"
        tools:srcCompat="@drawable/logo_black" />

    <LinearLayout
        android:id="@+id/con_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/access_margin_top"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="@dimen/width_button"
            android:layout_height="@dimen/height_button"
            android:text="@string/sign_in"
            android:background="@drawable/button"
            android:contentDescription="@string/sign_in"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_marginTop="@dimen/access_margin_top"
            android:layout_width="@dimen/width_button"
            android:layout_height="@dimen/height_button"
            android:text="@string/register"
            android:background="@drawable/button"
            android:contentDescription="@string/register"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/transparent"
        android:text="@string/forget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/con_auth"/>

    <TextView
        android:id="@+id/label_access_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_other"
        android:layout_marginTop="@dimen/access_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/btn_forget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/access_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_access_other">

        <ImageButton
            android:id="@+id/imageButton"
            android:scaleType="fitCenter"
            android:layout_width="@dimen/width_logo_other"
            android:layout_height="@dimen/height_logo_other"
            android:layout_marginEnd="@dimen/access_margin_right"
            android:background="@color/transparent"
            android:layout_weight="1"
            android:contentDescription="@string/google"
            app:srcCompat="@drawable/google"/>

        <ImageButton
            android:id="@+id/imageButton2"
            android:scaleType="fitCenter"
            android:layout_width="@dimen/width_logo_other"
            android:layout_height="@dimen/height_logo_other"
            android:background="@color/transparent"
            android:layout_weight="1"
            android:contentDescription="@string/facebook"
            app:srcCompat="@drawable/facebook"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>