<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_options"
    android:layout_width="@dimen/popup_options"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner"
    android:elevation="20dp"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="6dp"
    tools:context=".ProfileSettingsFragment">

    <!-- TextView cho văn bản -->
    <TextView
        android:id="@+id/share_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/location"
        android:drawablePadding="6dp"
        android:gravity="center_vertical"
        android:paddingVertical="6dp"
        android:text="@string/location"
        android:textSize="13sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/primary_grey" />

    <!-- TextView cho văn bản -->
    <TextView
        android:id="@+id/emoji"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/emoticon"
        android:drawablePadding="6dp"
        android:gravity="center_vertical"
        android:paddingVertical="6dp"
        android:text="@string/icon"
        android:textSize="13sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/primary_grey" />

    <!-- TextView cho văn bản -->
    <TextView
        android:id="@+id/share_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/gallery"
        android:drawablePadding="6dp"
        android:gravity="center_vertical"
        android:paddingVertical="6dp"
        android:text="@string/picture"
        android:textSize="13sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/primary_grey" />

    <!-- TextView cho văn bản -->
    <TextView
        android:id="@+id/voice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/microphone"
        android:drawablePadding="6dp"
        android:gravity="center_vertical"
        android:paddingVertical="6dp"
        android:text="@string/voice"
        android:textSize="13sp" />
</LinearLayout>